# hs-oidc-ext

./: .forbidden-identifiers.txt.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/okf-docs/: EVALUATIONS.md  SKILL.md
.claude/skills/okf-docs/assets/templates/: adr.md  concept.md  research.md  runbook.md  service.md  spec.md
.claude/skills/okf-docs/bench/: README.md  adding-backends.md  bench.json  render_evaluations.py
.claude/skills/okf-docs/evals/: evals.json
.claude/skills/okf-docs/references/: okf-cheatsheet.md  type-vocabulary.md
.claude/skills/okf-docs/scripts/: benchmark.py  okf_index.py  okf_log.py  okf_validate.py
.github/workflows/: ci.yml  release.yml
docs/: client-configuration.md  configuration.md  design-decisions.md  index.md  log.md  mcp-oauth.md  proxy-trick.md
docs/diagrams/: index.md  sequences-and-flows.md
docs/providers/: index.md  keycloak.md
docs/runbooks/: fresh-setup-keycloak.md  index.md
examples/: README.md  compose.mcp.yaml  compose.yaml  keycloak-realm.json
examples/client/: README.md  agent_client_credentials.py  curl.sh  python_client.py
examples/mcp/: Caddyfile  setup-mcp-oauth.sh
examples/proxy/: README.md  compose.yaml  sso_shell_proxy.py
scripts/: check_no_identifiers.sh
src/hs_oidc/: __init__.py  _metadata.py  _oidc.py  claims.py  doctor.py  http.py  login.py  tenant.py
tests/: conftest.py  helpers.py  test_auth.py  test_discovery.py  test_login.py  test_profiles.py  test_tenant.py
