[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hs-oidc-ext"
version = "0.2.0"
description = "Generic OIDC authentication + multi-tenancy extension for the Hindsight memory API (Keycloak, Auth0, Cognito, Okta, Entra ID, Zitadel, Authentik, …)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "hs-oidc-ext contributors" }]
keywords = ["hindsight", "oidc", "keycloak", "auth0", "cognito", "zitadel", "authentik", "multi-tenant", "sso", "extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
# Runtime deps are minimal: the host Hindsight process provides `hindsight_api`.
dependencies = ["PyJWT[crypto]>=2.8.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pre-commit>=3.7.0",
    # hindsight_api is the host that loads this extension; pulled in only for tests
    # so imports (TenantExtension, RequestContext) resolve.
    "hindsight-api-slim>=0.8.0",
]

[project.scripts]
hs-oidc = "hs_oidc.doctor:main"

[project.urls]
Repository = "https://github.com/ibaou-dev/hs-oidc-ext"
Issues = "https://github.com/ibaou-dev/hs-oidc-ext/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hs_oidc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--timeout 60 -v"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".claude", ".venv"]   # vendored skill scripts are not ours to lint

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true   # hindsight_api ships no type stubs
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# Don't follow into the host framework or its heavy transitive deps — we only
# type-check our own code; hindsight_api drags in numpy stubs that assume 3.12+.
[[tool.mypy.overrides]]
module = ["hindsight_api.*", "numpy.*", "jwt.*"]
follow_imports = "skip"
ignore_missing_imports = true
